Needed to add two more modules for the python course

--- a/languages/python/12_module.ipynb
+++ b/languages/python/12_module.ipynb
@@ -1,13 +1,122 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Module 12: Advanced Python Topics\n",
+    "\n",
+    "## Decorators\n",
+    "\n",
+    "Decorators allow us to wrap another function in order to extend the behavior of the wrapped function, without permanently modifying it.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something is happening before the function is called.\n",
+      "Hello!\n",
+      "Something is happening after the function is called.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_decorator(func):\n",
+    "    def wrapper():\n",
+    "        print(\"Something is happening before the function is called.\")\n",
+    "        func()\n",
+    "        print(\"Something is happening after the function is called.\")\n",
+    "    return wrapper\n",
+    "\n",
+    "def say_hello():\n",
+    "    print(\"Hello!\")\n",
+    "\n",
+    "# Apply the decorator to the say_hello function\n",
+    "say_hello = my_decorator(say_hello)\n",
+    "\n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Generators\n",
+    "\n",
+    "Generators are a type of iterable, like lists or tuples. Unlike lists, they don't allow indexing with arbitrary indices, but they can still be iterated through with for loops. They are created using functions and the `yield` keyword.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simple_generator():\n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3\n",
+    "\n",
+    "for value in simple_generator():\n",
+    "    print(value)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Context Managers\n",
+    "\n",
+    "A context manager is an object that defines the methods `__enter__()` and `__exit__()` that are used in with statements. They are typically used to manage resources like file operations or database connections that need specific set up and tear down procedures.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
-   "source": []
+   "source": [
+    "# Open a file using a context manager\n",
+    "with open('test.txt', 'w') as f:\n",
+    "    f.write(\"Hello, World!\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
