Updates to Mongo Basics

--- a/data_related/db_interactions/mongo_db.ipynb
+++ b/data_related/db_interactions/mongo_db.ipynb
@@ -414,10 +414,98 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Blog Example"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from mongoengine import Document, EmbeddedDocument, StringField, ReferenceField, ListField, DateTimeField, IntField\n",
+    "from datetime import datetime\n",
+    "\n",
+    "class User(Document):\n",
+    "    name = StringField(required=True, max_length=200)\n",
+    "    age = IntField(required=True)\n",
+    "\n",
+    "class Comment(EmbeddedDocument):\n",
+    "    content = StringField()\n",
+    "    author = ReferenceField(User)\n",
+    "    posted_at = DateTimeField(default=datetime.utcnow)\n",
+    "\n",
+    "class Post(Document):\n",
+    "    title = StringField(max_length=120, required=True)\n",
+    "    author = ReferenceField(User)\n",
+    "    posted_at = DateTimeField(default=datetime.utcnow)\n",
+    "    comments = ListField(EmbeddedDocumentField(Comment))\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In this example, a User is a document that has a name and age. A Comment is an embedded document — it doesn't exist on its own, but is always part of a Post. The Comment has a reference to the User who authored it, stored as a MongoDB ObjectId. A Post has a list of Comment embedded documents.\n",
+    "\n",
+    "Now, let's create a user, a post, and add a comment to the post:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Create a new user\n",
+    "user = User(name='John', age=30)\n",
+    "user.save()\n",
+    "\n",
+    "# Create a new post\n",
+    "post = Post(title='My First Post', author=user)\n",
+    "post.save()\n",
+    "\n",
+    "# Create a new comment and add it to the post\n",
+    "comment = Comment(content='Nice post!', author=user)\n",
+    "post.comments.append(comment)\n",
+    "post.save()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now, let's query for the post and print out the comments:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Get the first post\n",
+    "post = Post.objects.first()\n",
+    "\n",
+    "# Print post details\n",
+    "print(f'Post: {post.title}, Author: {post.author.name}, Posted at: {post.posted_at}')\n",
+    "\n",
+    "# Print all comments\n",
+    "for comment in post.comments:\n",
+    "    print(f'Comment: {comment.content}, Author: {comment.author.name}, Posted at: {comment.posted_at}')\n"
+   ],
    "metadata": {
     "collapsed": false
    }
