--- a/data_related/db_interactions/postgresSQL.ipynb
+++ b/data_related/db_interactions/postgresSQL.ipynb
@@ -431,6 +431,216 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Here is a more complex way of interaction with the database:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install sqlalchemy\n",
+    "!pip install psycopg2-binary\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine, Column, Integer, String, DateTime, ForeignKey, text\n",
+    "from sqlalchemy.dialects.postgresql import JSON, ARRAY\n",
+    "from sqlalchemy.orm import sessionmaker, relationship\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.sql import func\n",
+    "from datetime import datetime\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Define your database connection and a sessionmaker:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "engine = create_engine('postgresql://username:password@localhost:5432/database')\n",
+    "Session = sessionmaker(bind=engine)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now, you can define your base model and some example models:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "Base = declarative_base()\n",
+    "\n",
+    "class User(Base):\n",
+    "    __tablename__ = 'users'\n",
+    "\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    name = Column(String)\n",
+    "    age = Column(Integer)\n",
+    "    data = Column(JSON)\n",
+    "    tags = Column(ARRAY(String))\n",
+    "\n",
+    "    posts = relationship('Post', backref='author')\n",
+    "    comments = relationship('Comment', backref='author')\n",
+    "\n",
+    "class Post(Base):\n",
+    "    __tablename__ = 'posts'\n",
+    "\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    title = Column(String)\n",
+    "    content = Column(String)\n",
+    "    created_at = Column(DateTime, server_default=func.now())\n",
+    "    author_id = Column(Integer, ForeignKey('users.id'))\n",
+    "\n",
+    "    comments = relationship('Comment', backref='post')\n",
+    "\n",
+    "class Comment(Base):\n",
+    "    __tablename__ = 'comments'\n",
+    "\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    content = Column(String)\n",
+    "    created_at = Column(DateTime, server_default=func.now())\n",
+    "    author_id = Column(Integer, ForeignKey('users.id'))\n",
+    "    post_id = Column(Integer, ForeignKey('posts.id'))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In these models, data is a JSON column, and tags is an ARRAY of strings, demonstrating how to use complex data types in PostgreSQL.\n",
+    "\n",
+    "Before continuing, create all tables with Base.metadata.create_all(engine).\n",
+    "\n",
+    "Next, let's demonstrate how to use a transaction to ensure atomicity:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "session = Session()\n",
+    "\n",
+    "try:\n",
+    "    user = User(name='John', age=30, data={'occupation': 'Data Scientist'}, tags=['python', 'sql', 'machine learning'])\n",
+    "    session.add(user)\n",
+    "    session.commit()\n",
+    "except:\n",
+    "    session.rollback()\n",
+    "    raise\n",
+    "finally:\n",
+    "    session.close()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If anything goes wrong while adding the user, the transaction will be rolled back to ensure the database stays in a consistent state.\n",
+    "\n",
+    "For more complex querying, let's find all users who have 'python' in their tags and order them by age:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "session = Session()\n",
+    "\n",
+    "users = session.query(User).filter(User.tags.contains(['python'])).order_by(User.age)\n",
+    "\n",
+    "for user in users:\n",
+    "    print(user.name, user.age)\n",
+    "\n",
+    "session.close()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To use raw SQL, use the text() function. This might be useful when you want to use specific features of PostgreSQL that are not directly supported by SQLAlchemy:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "session = Session()\n",
+    "\n",
+    "query = text(\"SELECT * FROM users WHERE data->>'occupation' = :occupation\")\n",
+    "result = session.execute(query, {'occupation': 'Data Scientist'})\n",
+    "\n",
+    "for row in result:\n",
+    "    print(row)\n",
+    "\n",
+    "session.close()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
