--- a/data_related/db_interactions/mongo_db.ipynb
+++ b/data_related/db_interactions/mongo_db.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Mongo DB"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [
