Change to python course

--- a/languages/python/1_module.ipynb
+++ b/languages/python/1_module.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "print(\"Hello, World!\")"
+    "print(\"Hello, People of Earth\")"
    ],
    "metadata": {
     "collapsed": false
